Closed
Bug 822776
Opened 13 years ago
Closed 12 years ago
"Assertion failure: fragment" with <frameset>
Categories
(Core :: DOM: HTML Parser, defect)
Tracking
()
RESOLVED
FIXED
mozilla28
People
(Reporter: jruderman, Assigned: wchen)
References
Details
(Keywords: assertion, testcase)
Attachments
(4 files)
Assertion failure: fragment, at parser/html/nsHtml5TreeBuilder.cpp:2686
(Not to be confused with bug 797009, which is the opposite assertion, somewhere else in the code.)
| Reporter | ||
Comment 1•13 years ago
|
||
| Reporter | ||
Comment 2•12 years ago
|
||
Slightly different on trunk:
Assertion failure: fragment || isTemplateContents(), at parser/html/nsHtml5TreeBuilder.cpp:2848
| Reporter | ||
Comment 3•12 years ago
|
||
Comment 4•12 years ago
|
||
Assertion failure: fragment Beta/21
Assertion failure: fragment || isTemplateContents() Aurora/22, Nightly/23
Windows, Linux, OSX
http://www.wellensittich.net/ (reduces to the same testcase)
http://www.revistadoutrina.trf4.jus.br/index.htm?http://www.revistadoutrina.trf4.jus.br/artigos/edicao014/Daniela_Gomes.htm
OS: Mac OS X → All
Hardware: x86_64 → All
Version: Trunk → 21 Branch
| Assignee | ||
Updated•12 years ago
|
Assignee: nobody → wchen
| Assignee | ||
Comment 5•12 years ago
|
||
This assertion failure seems to happen because we do the wrong thing in the "after after frameset" insertion mode.
http://www.whatwg.org/specs/web-apps/current-work/multipage/tree-construction.html#the-after-after-frameset-insertion-mode
In particular, the current code sets the insertion mode to "in frameset" when the spec says to ignore end tags. I also noticed that we handle the "noframes" case incorrectly so I've fixed that as well.
Attachment #829649 -
Flags: review?(hsivonen)
Comment on attachment 829649 [details] [diff] [review]
Update "after after framset" insertion mode.
Could use a test case addition to the html5lib test cases.
Attachment #829649 -
Flags: review?(hsivonen) → review+
| Assignee | ||
Comment 7•12 years ago
|
||
Flags: in-testsuite+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in
before you can comment on or make changes to this bug.
Description
•